<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="top|center"
    android:orientation="vertical"
    android:background="@color/greyTransparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:elevation="12dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="15dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="35dp"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:gravity="center"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/prev_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/previous_password"
                android:inputType="textPassword"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:textColorHint="@color/dark_white"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/white" />
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textColorHint="@color/dark_white"
                android:background="@color/transparent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/white" />
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:textColorHint="@color/dark_white"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/orange" />
            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="end"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="40dp"
                android:textColor="@color/orange"
                android:background="@drawable/selector2"
                android:text="@string/confirm"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>