<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    tools:context=".activities.LoginActivity">



    <ImageView
        android:id="@+id/imageView4"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <!--            <FrameLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginVertical="10dp">-->
            <!--                <Button-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:background="@drawable/bottom_round"-->
            <!--                    android:layout_gravity="start"-->
            <!--                    android:text="LogIn"-->
            <!--                    android:textColor="@color/textcolor"/>-->
            <!--                <Button-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:background="@drawable/bottom_round"-->
            <!--                    android:layout_gravity="end"-->
            <!--                    android:text="SigN UP"-->
            <!--                    android:onClick="signUp"-->
            <!--                    android:textColor="@color/textcolor"/>-->


            <!--            </FrameLayout>-->
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Welcome Back! \n SignIn to continue "
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/device_imei"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_rectangle_1594"
                android:drawableStart="@android:drawable/stat_sys_phone_call_on_hold"
                android:drawablePadding="10dp"
                android:drawableTint="@color/darker_gray"
                android:hint="@string/device_imei"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/hint_color"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle_1594"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:drawableTint="@color/darker_gray"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_rectangle_1594"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/darker_gray"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="showPassword"
                    android:src="@drawable/ic_group_648" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <!--                <CheckBox-->
                <!--                    android:id="@+id/cb_remember_me"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="start"-->
                <!--                    android:text="@string/remember_me"-->
                <!--                    android:textColor="@color/textcolor" />-->

                <!--                <TextView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="end|center"-->
                <!--                    android:onClick="ForgotPassword"-->
                <!--                    android:text="@string/forgot_password"-->
                <!--                    android:textColor="@color/text_color_red" />-->
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_sign_in"
                android:backgroundTint="@color/btn_color"
                android:onClick="Login"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@color/white"
                tools:ignore="OnClick" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:src="@drawable/line"
                    app:layout_constraintBottom_toBottomOf="@id/tv_or"
                    app:layout_constraintEnd_toStartOf="@id/tv_or"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_or" />

                <TextView
                    android:id="@+id/tv_or"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sl"
                    android:textColor="@color/line_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:src="@drawable/line"
                    app:layout_constraintBottom_toBottomOf="@id/tv_or"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_or"
                    app:layout_constraintTop_toTopOf="@id/tv_or" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:onClick="signUp"
                    android:text="@string/sign_up"
                    android:textColor="@color/btn_color" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>