<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    tools:context=".activities.SignupActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:drawablePadding="20dp"-->
<!--        android:drawableTint="@color/green"-->
<!--        android:onClick="back"-->
<!--        android:text="@string/sign_up"-->
<!--        android:textColor="@color/textcolor"-->
<!--        android:textSize="20sp"-->
<!--        app:drawableStartCompat="@drawable/back_arrow"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/imageView4" />-->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView4">

<!--            <FrameLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginVertical="10dp">-->
<!--                <Button-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@drawable/bottom_round"-->
<!--                    android:layout_gravity="start"-->
<!--                    android:text="Sign up"-->
<!--                    android:textColor="@color/textcolor"/>-->
<!--                <Button-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@drawable/bottom_round"-->
<!--                    android:layout_gravity="end"-->
<!--                    android:text="Log In"-->
<!--                    android:onClick="loginpage"-->
<!--                    android:textColor="@color/textcolor"/>-->


<!--            </FrameLayout>-->
            <TextView

                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="No Account \n Create an Account"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp" />






            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_rectangle_1594"
                android:drawableStart="@drawable/user"
                android:drawablePadding="10dp"
                android:drawableTint="@color/textcolor"
                android:hint="Username"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />




            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle_1594"
                android:drawableStart="@drawable/user"
                android:drawablePadding="10dp"
                android:drawableTint="@color/textcolor"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_rectangle_1594"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/textcolor"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="showPassword"
                    android:src="@drawable/ic_group_648"
                    app:tint="@color/textcolor" />

            </FrameLayout>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_rectangle_1594"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/textcolor"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="showPassword"
                    android:src="@drawable/ic_group_648"
                    app:tint="@color/textcolor" />

            </FrameLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_back"
                android:backgroundTint="@color/btn_color"
                android:onClick="signUp"
                android:text="Signup"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>